--- a/web/index.html
+++ b/web/index.html
@@ -37,8 +37,12 @@
     <script src="/js/bootstrap-transition.js"></script>
     <script src="/js/bootstrap-typeahead.js"></script>
     <script src="/js/jquery-ui-1.10.0.custom.js"></script>
+      <script src="/js/jquery-1.9.1.js"></script>
+    <script src="/js/spin.js"></script>
+     <script src="/js/spin.min.js"></script>
+      <script src="/js/spinner.js"></script>
 
-    <div class="navbar navbar-fixed-top navbar-inverse">
+    <div class="navbar navbar-fixed-top navbar-inverse" id="nav">
         <div class="navbar-inner">
             <div class="container">
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
