--- a/web/index.html
+++ b/web/index.html
@@ -5,34 +5,39 @@
     <title>Losofacebook</title>
     <link rel="icon" type="image/png" href="/losofacebook-favicon.png"  />
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css"/>
     <!--<link rel="stylesheet/less" type="text/css" href="/css/losofacebook-main.less" />-->
-    <link rel="stylesheet" type="text/css" href="/css/losofacebook-main.css" />
-    <script src="/js/jquery-1.9.1.js"></script>
-    <script src="/lib/angular/angular.js"></script>
-    <script src="/lib/angular/angular-resource.js"></script>
-    <script src="/lib/angular/angular-sanitize.js"></script>
-    <script src="/lib/angular/angular-cookies.js"></script>
-    <script src="/js/less.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/services.js"></script>
-    <script src="/js/controllers.js"></script>
-    <script src="/js/filters.js"></script>
-    <script src="/js/directives.js"></script>
-    <script src="/js/bootstrap-affix.js"></script>
-    <script src="/js/bootstrap-alert.js"></script>
-    <script src="/js/bootstrap-button.js"></script>
-    <script src="/js/bootstrap-carousel.js"></script>
-    <script src="/js/bootstrap-collapse.js"></script>
-    <script src="/js/bootstrap-dropdown.js"></script>
-    <script src="/js/bootstrap-modal.js"></script>
-    <script src="/js/bootstrap-scrollspy.js"></script>
-    <script src="/js/bootstrap-tab.js"></script>
-    <script src="/js/bootstrap-tooltip.js"></script>
-    <script src="/js/bootstrap-transition.js"></script>
-    <script src="/js/bootstrap-typeahead.js"></script>
-    <script src="/js/spin.min.js"></script>
-    <script src="/js/spinner.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/losofacebook-main.min.css" />
+
+    <script src="//static.losofacebook.tunk.io/lib/angular/angular.min.js"></script>
+    <script src="//static.losofacebook.tunk.io/lib/angular/angular-resource.min.js"></script>
+    <script src="//static.losofacebook.tunk.io/lib/angular/angular-sanitize.min.js"></script>
+    <script src="//static.losofacebook.tunk.io/lib/angular/angular-cookies.min.js"></script>
+  
+     <script src="//static.losofacebook.tunk.io/js/all2.min.js"></script>
+              <!--
+               <script src="//static.losofacebook.tunk.io/js/jquery-1.9.1.js"></script>
+   <script src="//static.losofacebook.tunk.io/js/all.min.js"></script>
+         <script src="//static.losofacebook.tunk.io/assets/javascripts.php"></script>
+ <script src="//static.losofacebook.tunk.io/js/less.min.js"></script>
+     <script src="//static.losofacebook.tunk.io/js/app.min.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/services.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/controllers.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/filters.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-affix.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-alert.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-button.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-carousel.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-collapse.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-dropdown.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-modal.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-scrollspy.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-tab.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-tooltip.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-transition.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/bootstrap-typeahead.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/spin.min.js"></script>
+    <script src="//static.losofacebook.tunk.io/js/spinner.min.js"></script>-->
 </head>
 <body>
     <div class="navbar navbar-fixed-top navbar-inverse" id="nav">
